// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaxBinaryHeapTest Should update heap by index from bottom to top 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 58469,
}
`;

exports[`MaxBinaryHeapTest Should update heap by index from middle to bottom 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 49394,
}
`;

exports[`MaxBinaryHeapTest Should update heap by index from middle to top 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 46337,
}
`;

exports[`MaxBinaryHeapTest Should update heap by index from top to bottom 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 64119,
}
`;

exports[`MaxBinaryHeapTest Should update heap by index should update node account by index 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 27228,
}
`;

exports[`MaxBinaryHeapTest Should update heap by index without changing position 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 29393,
}
`;

exports[`MaxBinaryHeapTest should add new item and rebuild tree 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 89190,
}
`;

exports[`MaxBinaryHeapTest should create max binary heap and remove items in right order 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 144883,
}
`;

exports[`MaxBinaryHeapTest should create max binary heap and remove items in right order 2`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 112750,
}
`;

exports[`MaxBinaryHeapTest should remove item by index 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 41452,
}
`;
